--- a/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
+++ b/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="ContainerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Bootstrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
