--- a/Xamagon.SeedApp.iOS/Xamagon.SeedApp.iOS.csproj
+++ b/Xamagon.SeedApp.iOS/Xamagon.SeedApp.iOS.csproj
@@ -98,6 +98,7 @@
     <ITunesArtwork Include="iTunesArtwork@2x" />
     <None Include="packages.config" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Providers\SecureStorageProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -192,6 +193,9 @@
       <Project>{DD303CD4-AD89-43C8-8F1B-010347267815}</Project>
       <Name>Xamagon.SeedApp.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Providers\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
