Implemented BaseViewModel and DialogService

--- a/Xamagon.SeedApp/Xamagon.SeedApp.csproj
+++ b/Xamagon.SeedApp/Xamagon.SeedApp.csproj
@@ -48,6 +48,8 @@
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\LoginPageViewModel.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="Services\DialogService.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
