--- a/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
+++ b/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Interfaces\INavigationService.cs" />
     <Compile Include="Interfaces\ISecureStorageProvider.cs" />
+    <Compile Include="Interfaces\IDialogService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
