--- a/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
+++ b/Xamagon.SeedApp.Common/Xamagon.SeedApp.Common.csproj
@@ -35,11 +35,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ContainerManager.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\ILoggingProvider.cs" />
+    <Compile Include="Logging\IStackFrameProvider.cs" />
+    <Compile Include="Logging\LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrapper.cs" />
-    <Compile Include="Interfaces\INavigationService.cs" />
-    <Compile Include="Interfaces\ISecureStorageProvider.cs" />
-    <Compile Include="Interfaces\IDialogService.cs" />
+    <Compile Include="UserInterface\INavigationService.cs" />
+    <Compile Include="Security\ISecureLocalStorageProvider.cs" />
+    <Compile Include="UserInterface\IDialogService.cs" />
+    <Compile Include="Utilities\RandomTextGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
@@ -50,9 +55,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
