--- a/Xamagon.SeedApp.Data/packages.config
+++ b/Xamagon.SeedApp.Data/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="DotNetCross.Memory.Unsafe" version="0.2.3.4" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Realm" version="0.78.0" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
-  <package id="Remotion.Linq" version="2.1.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="sqlite-net-pcl" version="1.1.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCL.raw" version="0.9.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Collections" version="4.0.11" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Linq" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
