--- a/Xamagon.SeedApp.iOS/Xamagon.SeedApp.iOS.csproj
+++ b/Xamagon.SeedApp.iOS/Xamagon.SeedApp.iOS.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Providers\DataConfigProvider.cs" />
     <Compile Include="Providers\StackFrameProvider.cs" />
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
